--- a/src/style.css
+++ b/src/style.css
@@ -178,6 +178,9 @@ button {
   }
 }
 @media (max-width: 415px) {
+  .checkbox:checked ~ p {
+    font-size: 12px;
+  }
   .title {
     font-size: 34px;
   }
